# python-for-linear-algebra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  settings.py
src/exercises/: exercise-01-vectors.py  exercise-02-matrices.py  exercise-03-linear-systems.py  exercise-04-eigen.py  exercise-05-svd.py  exercise-06-applications.py
src/figures/: fig-01-vector-ops.py  fig-02-linear-transform.py  fig-04-pca.py  fig-05-svd-compression.py
tests/: test_settings.py
