[project]
name = "python-base-template"
version = "0.1.0"
description = "Python base template with modern tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=3.8.0,<4.0.0",
  "pyright>=1.1.390,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src/app"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUntypedBaseClass = false
executionEnvironments = [{ root = ".", extraPaths = ["src"] }]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
